Fix: adapt button spacing in discover

--- a/style/components/discover.css
+++ b/style/components/discover.css
@@ -17,5 +17,6 @@
 .discover__button-container {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 30px;
 }
